refactor: 리스트 변환방식 변경